--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,1 +1,31 @@
 <!DOCTYPE html>
+<html>
+    <body>
+        <p id="notice"></p>
+        <h1>Books</h1>
+         <table>
+             <thead>
+                 <tr>
+                     <th>Title</th>
+                     <th>Body</th>
+                     <th colspan="3"></th>
+                 </tr>
+             </thead>
+    </body>
+    <tbody>
+        <%= @books.each do |book| %>
+        <span><%= link_to book.title, book_path(book.id) %></span>
+  　<% end %>
+
+    </table>
+    <h1>New book</h1>
+    <%= form_with model: @book, url: '/books', method: :post do |f| %>
+    <h4>Title</h4>
+    <%= f.text_field :title %>
+
+    <h4>Body</h4>
+    <%= f.text_area :body %>
+
+    <%= f.submit 'Create Book' %>
+    <% end %>
+</html>
