--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,5 @@
-<P><%= @book.Show %></P>
-<P><%= @book.Show %></P>
-<P><%= @book.Show %></P>
-<P><%= @book.Show %></P>
-<P><%= @book.Show %></P>
-<P><%= @book.Show %></P>
-<P><%= @book.Show %></P>
+<h2>タイトル</h2>
+<p><%= @book.title %></p>
+
+<h2>本文</h2>
+<p><%= @book.body %></p>
