--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,9 +13,11 @@
              </thead>
     </body>
     <tbody>
-        <%= @books.each do |book| %>
-        <span><%= link_to book.title, book_path(book.id) %></span>
-  　<% end %>
+        <% @books.each do |book| %>
+        <span><%= link_to "Show", book_path(book.id) %></span>
+        <span><%= link_to "Edit", book_path(book.id) %></span>
+        <span><%= link_to "Destroy", book_path(book.id) %></span>
+  　     <% end %>
 
     </table>
     <h1>New book</h1>
