--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,11 +14,15 @@
     </body>
     <tbody>
         <% @books.each do |book| %>
-        <span><%= link_to "Show", book_path(book.id) %></span>
-        <span><%= link_to "Edit", book_path(book.id) %></span>
-        <span><%= link_to "Destroy", book_path(book.id) %></span>
+        <tr>
+          <td><%= book.title %></td>
+          <td><%= book.body %></td>
+          <td><%= link_to "Show", book_path(book.id) %></td>
+          <td><%= link_to "Edit", book_path(book.id) %></td>
+          <td><%= link_to "Destroy", book_path(book.id) %></td>
+        </tr>
   　     <% end %>
-
+  　</tbody>
     </table>
     <h1>New book</h1>
     <%= form_with model: @book, url: '/books', method: :post do |f| %>
