--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
     <body>
         <p id="notice"></p>
         <h1>Books</h1>
@@ -18,12 +17,22 @@
           <td><%= book.title %></td>
           <td><%= book.body %></td>
           <td><%= link_to "Show", book_path(book.id) %></td>
-          <td><%= link_to "Edit", book_path(book.id) %></td>
-          <td><%= link_to "Destroy", book_path(book.id) %></td>
+          <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+          <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
         </tr>
   　     <% end %>
   　</tbody>
     </table>
+         <% if @book.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+<% end %>
     <h1>New book</h1>
     <%= form_with model: @book, url: '/books', method: :post do |f| %>
     <h4>Title</h4>
@@ -34,4 +43,3 @@
 
     <%= f.submit 'Create Book' %>
     <% end %>
-</html>
